--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ isort = "^5.13.2"
 
 [tool.poetry.group.test.dependencies]
 pytest = "^8.2.1"
+coverage = "^7.5.1"
 
 [build-system]
 requires = ["poetry-core"]
