--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,9 @@ isort = "^5.13.2"
 pytest = "^8.2.1"
 coverage = "^7.5.1"
 
+[tool.pytest.ini_options]
+pythonpath = [".", "tests",]
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
